[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
dotenvy = "0.15.7"

thiserror = "2"
once_cell = "1.21.3"
bitflags = "2.10.0"

prost = "0.14.1"
prost-types = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
futures-util = { version = "0.3.31", features = ["sink"] }
