[package]
name = "ctfjx_proto"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "ctfjx_proto"
path = "src/lib.rs"

[dependencies]
prost-wkt = "0.7.0"
prost-wkt-types = "0.7.0"

prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }


[build-dependencies]
tonic-prost-build = "0.14.2"
